# menu-entry-manager

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: app.rs  desktop_file.rs  main.rs  ui.rs
