[package]
name = "menu-entry-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.8", features = ["v4_8"] }
glib = "0.19"
gio = "0.19"
gdk4 = "0.8"
gdk-pixbuf = "0.20"
libadwaita = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
